bin/tests/errors_lexer/lexer/lex_err_invalid_bin_digit.swg
#global fileprivate

0b01G // swc-expected-error {{lex_err_invalid_bin_digit}}
